# django-geo-chile

./: .gitignore  README.md  pyproject.toml
example/example/: settings.py  urls.py
geo_chile/: __init__.py  admin.py  apps.py  models.py
geo_chile/management/commands/: load_geo_chile_data.py
geo_chile/migrations/: 0001_initial.py  0002_auto_20200619_1717.py
tests/: test_django_geo_chile.py
